<resources>
    <string name="app_name">Linkit</string>
    <string name="change">GGWPSURR@20</string>
    <string name="great">GreAT</string>
    <string name="sign_in">Sign in</string>
    <string name="nickname">NickName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="empty">Can\'t be empty</string>
    <string name="email_wrong_format">check the email format</string>
    <string name="option_setting">setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fail_to_decline">failed to decline</string>
    <string name="request_declined_successfully">request declined successfully</string>
    <string name="fail_to_accept">fail to accept</string>
    <string name="accepted_successfully">accepted successfully</string>
    <string name="uploading_file">uploading %1$s (%2$s %%)</string>
    <string name="uploading..">uploading..</string>
    <string name="failed_to_delete_message">Failed to delete message :%1$s</string>
    <string name="message_deleted_successfully">Message deleted successfully</string>
    <string name="failed_to_delete_file">Failed to delete file %1$s</string>
    <string name="downloading_file">downloading %1$s (%2$s %%)</string>
    <string name="view">View</string>
    <string name="fail_to_download">fail to download :%1$s</string>
    <string name="reset_password">reset_password</string>
    <string name="reset_password_instruction">Reset password instrctions has been sent on email: %1$s</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="email_sent_faild">faild to seend email : %1$s</string>
    <string name="resend_timer">Resend Timer : %1Ss</string>
</resources>